# balloon-detection-yolov8

./: .gitignore  README.md  dataset_merged.yaml  pyproject.toml
src/: convert_all_labels_to_balloon.py  export_onnx.py  merge_datasets.py  predict.py  train.py  validate_onnx.py
