[project]
name = "ai-egitim"
version = "0.1.0"
description = ""
authors = [
    {name = "Şevin Sönmez",email = "sevinsonmezz@gmail.com"}
]
readme = "README.md"
requires-python = "^3.10"
dependencies = [
    "ultralytics (>=8.4.41,<9.0.0)",
    "onnx (>=1.21.0,<2.0.0)",
    "onnxslim (>=0.1.91,<0.2.0)",
    "onnxruntime (==1.20.1)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
